added max inflight , added metrics for rule engine