@@ -17,6 +17,9 @@ import com.wizzdi.flexicore.boot.dynamic.invokers.service.DynamicInvokerService;
 import com.wizzdi.flexicore.file.model.FileResource;
 import com.wizzdi.flexicore.security.interfaces.SecurityContextProvider;
 import com.wizzdi.flexicore.security.request.BasicPropertiesFilter;
+import io.micrometer.core.instrument.Counter;
+import io.micrometer.core.instrument.MeterRegistry;
+import io.micrometer.core.instrument.Timer;
 import org.apache.commons.io.FileUtils;
 import org.pf4j.Extension;
 import org.slf4j.Logger;
@@ -36,6 +39,7 @@ import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -81,7 +85,11 @@ public class ScenarioManager implements Plugin {
     @Autowired
     private SecurityContextProvider securityContextProvider;
 
+    @Autowired
+    private MeterRegistry meterRegistry;
+    private static final Map<String,Counter> eventTypeCounterMap =new ConcurrentHashMap<>();
 
+    private static final Map<String,Timer> timerMap =new ConcurrentHashMap<>();
 
     private boolean isActive(ScenarioTrigger trigger) {
         return trigger.getActiveTill() != null && trigger.getActiveTill().isAfter(OffsetDateTime.now());
@@ -90,7 +98,8 @@ public class ScenarioManager implements Plugin {
     @Async
     @EventListener
     public <T extends ScenarioEvent> void handleTrigger(T scenarioEvent) {
-        logger.info("Scenario Trigger Event " + scenarioEvent + "captured by Scenario Manager");
+        logger.debug("Scenario Trigger Event " + scenarioEvent + "captured by Scenario Manager");
+        incEventType(scenarioEvent.getClass().getCanonicalName());
         List<SecurityTenant> tenants = scenarioEvent.getSecurityContext().getTenants();
         if(tenants.isEmpty()){
             logger.debug("No tenants for security context ");
@@ -103,19 +112,27 @@ public class ScenarioManager implements Plugin {
         List<Object> toMerge = new ArrayList<>();
         for (ScenarioTrigger trigger : triggers) {
 
-            if (!isValid(trigger)) {
-                logger.debug("Trigger " + trigger.getName() + "(" + trigger.getId() + ") invalid");
-                continue;
+
+
+                if (!isValid(trigger)) {
+                    logger.debug("Trigger " + trigger.getName() + "(" + trigger.getId() + ") invalid");
+                    continue;
+                }
+                long start=System.nanoTime();
+            try {
+                EvaluateTriggerResponse evaluateTriggerResponse = evaluateTrigger(new EvaluateTriggerRequest().setScenarioTrigger(trigger).setScenarioEvent(scenarioEvent));
+                if (evaluateTriggerResponse.isActive()) {
+                    activeTriggers.add(trigger);
+                }
+                if (changeTriggerState(trigger, scenarioEvent, evaluateTriggerResponse)) {
+                    logger.info("Trigger " + trigger.getName() + "(" + trigger.getId() + ") state changed to Active till" + trigger.getActiveTill());
+                    toMerge.add(trigger);
+                } else {
+                    logger.debug("Trigger " + trigger.getName() + "(" + trigger.getId() + ") state stayed Active till" + trigger.getActiveTill());
+                }
             }
-            EvaluateTriggerResponse evaluateTriggerResponse = evaluateTrigger(new EvaluateTriggerRequest().setScenarioTrigger(trigger).setScenarioEvent(scenarioEvent));
-            if (evaluateTriggerResponse.isActive()) {
-                activeTriggers.add(trigger);
-            }
-            if (changeTriggerState(trigger, scenarioEvent, evaluateTriggerResponse)) {
-                logger.info("Trigger " + trigger.getName() + "(" + trigger.getId() + ") state changed to Active till" + trigger.getActiveTill());
-                toMerge.add(trigger);
-            } else {
-                logger.debug("Trigger " + trigger.getName() + "(" + trigger.getId() + ") state stayed Active till" + trigger.getActiveTill());
+            finally {
+                timeTrigger(trigger,System.nanoTime()-start);
             }
 
 
@@ -152,19 +169,24 @@ public class ScenarioManager implements Plugin {
             }
             String scenarioId = entry.getKey();
             Scenario scenario = scenarioMap.get(scenarioId);
-            SecurityContextBase securityContext = securityContextMap.get(scenario.getSecurity().getCreator().getId()).setTenantToCreateIn(scenario.getSecurity().getTenant());
-            List<ScenarioTrigger> scenarioToTriggerList = entry.getValue().stream().sorted(Comparator.comparing(f -> f.getOrdinal())).map(f -> f.getScenarioTrigger()).collect(Collectors.toList());
-            List<DataSource> scenarioToDataSources = scenarioToDataSource.getOrDefault(scenarioId, new ArrayList<>()).stream().sorted(Comparator.comparing(f -> f.getOrdinal())).map(f -> f.getDataSource()).collect(Collectors.toList());
-            List<ActionContext> scenarioActions = actionsByScenario.getOrDefault(scenarioId, new ArrayList<>()).stream().map(f -> f.getScenarioAction()).collect(Collectors.toMap(f -> f.getId(), f -> dynamicExecutionService.getExecuteInvokerRequest(f.getDynamicExecution(), securityContext), (a, b) -> a)).entrySet().stream().map(f -> new ActionContext(f.getKey(), f.getValue())).toList();
+            long started=System.nanoTime();
+            try {
+                SecurityContextBase securityContext = securityContextMap.get(scenario.getSecurity().getCreator().getId()).setTenantToCreateIn(scenario.getSecurity().getTenant());
+                List<ScenarioTrigger> scenarioToTriggerList = entry.getValue().stream().sorted(Comparator.comparing(f -> f.getOrdinal())).map(f -> f.getScenarioTrigger()).collect(Collectors.toList());
+                List<DataSource> scenarioToDataSources = scenarioToDataSource.getOrDefault(scenarioId, new ArrayList<>()).stream().sorted(Comparator.comparing(f -> f.getOrdinal())).map(f -> f.getDataSource()).collect(Collectors.toList());
+                List<ActionContext> scenarioActions = actionsByScenario.getOrDefault(scenarioId, new ArrayList<>()).stream().map(f -> f.getScenarioAction()).collect(Collectors.toMap(f -> f.getId(), f -> dynamicExecutionService.getExecuteInvokerRequest(f.getDynamicExecution(), securityContext), (a, b) -> a)).entrySet().stream().map(f -> new ActionContext(f.getKey(), f.getValue())).toList();
 
-            EvaluateScenarioRequest evaluateScenarioRequest = new EvaluateScenarioRequest()
-                    .setScenario(scenario)
-                    .setScenarioEvent(scenarioEvent)
-                    .setScenarioTriggers(scenarioToTriggerList)
-                    .setDataSources(scenarioToDataSources)
-                    .setActions(scenarioActions);
-            EvaluateScenarioResponse evaluateScenarioResponse = evaluateScenario(evaluateScenarioRequest);
-            evaluateScenarioResponses.add(evaluateScenarioResponse);
+                EvaluateScenarioRequest evaluateScenarioRequest = new EvaluateScenarioRequest()
+                        .setScenario(scenario)
+                        .setScenarioEvent(scenarioEvent)
+                        .setScenarioTriggers(scenarioToTriggerList)
+                        .setDataSources(scenarioToDataSources)
+                        .setActions(scenarioActions);
+                EvaluateScenarioResponse evaluateScenarioResponse = evaluateScenario(evaluateScenarioRequest);
+                evaluateScenarioResponses.add(evaluateScenarioResponse);
+            }finally {
+                timeScenario(scenario,System.nanoTime()-started);
+            }
 
         }
         for (EvaluateScenarioResponse evaluateScenarioResponse : evaluateScenarioResponses) {
@@ -174,26 +196,30 @@ public class ScenarioManager implements Plugin {
 
                         String actionId = entry.getKey();
                         ScenarioAction scenarioAction = actionsById.get(actionId);
-                        ExecuteInvokerRequest executeInvokerRequest = entry.getValue();
-                        Scenario scenario = evaluateScenarioResponse.getEvaluateScenarioRequest().getScenario();
-                        SecurityContextBase securityContext = securityContextMap.get(scenario.getSecurity().getCreator().getId()).setTenantToCreateIn(scenario.getSecurity().getTenant());
-                    Logger scenarioTriggerLogger = getLogger(scenario.getId(), scenario.getLogFileResource().getFullPath());
+                        long started=System.nanoTime();
+                        try {
+                            ExecuteInvokerRequest executeInvokerRequest = entry.getValue();
+                            Scenario scenario = evaluateScenarioResponse.getEvaluateScenarioRequest().getScenario();
+                            SecurityContextBase securityContext = securityContextMap.get(scenario.getSecurity().getCreator().getId()).setTenantToCreateIn(scenario.getSecurity().getTenant());
+                            Logger scenarioTriggerLogger = getLogger(scenario.getId(), scenario.getLogFileResource().getFullPath());
 
-                    String message = "Executing action %s(%s) for scenario %s(%s)".formatted(scenarioAction.getName(), scenarioAction.getId(), scenario.getName(), scenario.getId());
-                    scenarioTriggerLogger.info(message);
-                    logger.info(message);
-                    try {
-                        ExecuteInvokersResponse executeInvokersResponse = dynamicInvokerService.executeInvoker(executeInvokerRequest, securityContext);
-                        String resultMessage="Executed action %s(%s) for scenario %s(%s) with result %s".formatted(scenarioAction.getName(), scenarioAction.getId(), scenario.getName(), scenario.getId(), executeInvokersResponse);
-                        scenarioTriggerLogger.info(resultMessage);
+                            String message = "Executing action %s(%s) for scenario %s(%s)".formatted(scenarioAction.getName(), scenarioAction.getId(), scenario.getName(), scenario.getId());
+                            scenarioTriggerLogger.info(message);
+                            logger.info(message);
+                            try {
+                                ExecuteInvokersResponse executeInvokersResponse = dynamicInvokerService.executeInvoker(executeInvokerRequest, securityContext);
+                                String resultMessage = "Executed action %s(%s) for scenario %s(%s) with result %s".formatted(scenarioAction.getName(), scenarioAction.getId(), scenario.getName(), scenario.getId(), executeInvokersResponse);
+                                scenarioTriggerLogger.info(resultMessage);
 
-                    }
-                    catch (Throwable e){
-                        logger.error("failed executing action",e);
-                        scenarioTriggerLogger.error("failed executing action: " + e, e);
+                            } catch (Throwable e) {
+                                logger.error("failed executing action", e);
+                                scenarioTriggerLogger.error("failed executing action: " + e, e);
 
 
-                    }
+                            }
+                        }finally {
+                            timeAction(scenarioAction,System.nanoTime()-started);
+                        }
 
                 }
             }
@@ -345,5 +371,39 @@ public class ScenarioManager implements Plugin {
         base += "};";
         return base;
 
+    }
+
+
+    private void incEventType( String type) {
+        Counter counter = eventTypeCounterMap.computeIfAbsent(type, e -> Counter.builder("rules.events.count")
+                .tag("type", type)
+                .register(meterRegistry));
+        counter.increment();
+    }
+
+
+    private void timeTrigger(ScenarioTrigger scenarioTrigger, long time) {
+
+        io.micrometer.core.instrument.Timer timer = timerMap.computeIfAbsent(scenarioTrigger.getId(), e -> Timer.builder("rules.triggers.time")
+                .tag("id", scenarioTrigger.getId())
+                .tag("name",scenarioTrigger.getName())
+                .register(meterRegistry));
+        timer.record(time, TimeUnit.NANOSECONDS);
+    }
+    private void timeScenario(Scenario scenario, long time) {
+
+        io.micrometer.core.instrument.Timer timer = timerMap.computeIfAbsent(scenario.getId(), e -> Timer.builder("rules.scenario.time")
+                .tag("id", scenario.getId())
+                .tag("name",scenario.getName())
+                .register(meterRegistry));
+        timer.record(time, TimeUnit.NANOSECONDS);
+    }
+    private void timeAction(ScenarioAction scenarioAction, long time) {
+
+        io.micrometer.core.instrument.Timer timer = timerMap.computeIfAbsent(scenarioAction.getId(), e -> Timer.builder("rules.action.time")
+                .tag("id", scenarioAction.getId())
+                .tag("name",scenarioAction.getName())
+                .register(meterRegistry));
+        timer.record(time, TimeUnit.NANOSECONDS);
     }
 }
